--- a/after-the-mvp.html
+++ b/after-the-mvp.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
@@ -10,9 +10,37 @@
       name="description"
       content="Once your product gains traction, we help startups streamline cloud spend and get audit-ready — without hiring full-time engineers."
     />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.alphapebble.com/" />
+    <meta property="og:title" content="AlphaPebble | Micro-Product Studio" />
+    <meta
+      property="og:description"
+      content="A micro-product studio for founders who move fast. We build MVPs, run experiments, and create reusable outcomes."
+    />
+    <meta
+      property="og:image"
+      content="https://www.alphapebble.com/images/social-preview.png"
+    />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.alphapebble.com/" />
+    <meta
+      property="twitter:title"
+      content="AlphaPebble | Micro-Product Studio"
+    />
+    <meta
+      property="twitter:description"
+      content="A micro-product studio for founders who move fast. We build MVPs, run experiments, and create reusable outcomes."
+    />
+    <meta
+      property="twitter:image"
+      content="https://www.alphapebble.com/images/social-preview.png"
+    />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="preconnect" href="https://cdn.tailwindcss.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -22,81 +50,134 @@
               dark: "#0F172A",
               darker: "#080D1B",
               primary: "#3B82F6",
+              secondary: "#60A5FA",
+              accent: "#2563EB",
               light: "#F6F6F7",
             },
-            fontFamily: { sans: ["Inter", "sans-serif"] },
+            fontFamily: {
+              sans: ["Inter", "sans-serif"],
+            },
+            plugins: [
+              function ({ addUtilities }) {
+                addUtilities({
+                  ".sr-only": {
+                    position: "absolute",
+                    width: "1px",
+                    height: "1px",
+                    padding: "0",
+                    margin: "-1px",
+                    overflow: "hidden",
+                    clip: "rect(0, 0, 0, 0)",
+                    whiteSpace: "nowrap",
+                    borderWidth: "0",
+                  },
+                  ".not-sr-only": {
+                    position: "static",
+                    width: "auto",
+                    height: "auto",
+                    padding: "0",
+                    margin: "0",
+                    overflow: "visible",
+                    clip: "auto",
+                    whiteSpace: "normal",
+                  },
+                });
+              },
+            ],
           },
         },
       };
     </script>
+
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <style>
-      body {
-        background-color: #0f172a;
-        color: #f6f6f7;
-        font-family: "Inter", sans-serif;
-      }
-      .prose-custom p,
-      .prose-custom li {
-        color: #f6f6f7b3;
-      }
-      .btn {
-        transition: all 0.3s ease;
-      }
-      .btn:active {
-        transform: scale(0.97);
-      }
-      .btn-primary {
-        background: linear-gradient(90deg, #3b82f6, #2563eb);
-      }
-      .btn-primary:hover {
-        transform: translateY(-2px);
-        box-shadow: 0 5px 15px rgba(59, 130, 246, 0.4);
-      }
-      header.scrolled {
-        background-color: rgba(8, 13, 27, 0.8);
-        backdrop-filter: blur(10px);
-      }
-    </style>
+    <link rel="stylesheet" href="/style.css" />
   </head>
-  <body class="bg-dark text-light">
+  <body class="min-h-screen">
+    <div id="cursor-dot"></div>
+    <div id="cursor-outline"></div>
+
     <header
       class="py-4 fixed top-0 left-0 right-0 z-50 transition-all duration-300"
     >
       <div class="container mx-auto px-6 md:px-12">
         <nav class="flex justify-between items-center">
-          <a href="../index.html" class="flex items-center gap-3">
+          <a href="index.html#" class="flex items-center gap-3">
             <img
-              src="../images/logo.svg"
+              src="/images/logo.svg"
               alt="AlphaPebble Logo"
               class="h-12 w-12 rounded-full bg-white p-0.5"
             />
-            <span class="text-2xl font-bold text-light">AlphaPebble</span>
+            <span class="text-2xl font-bold text-text-secondary">
+              AlphaPebble
+            </span>
           </a>
           <div class="hidden md:flex items-center gap-8">
+            <button
+              id="theme-toggle"
+              class="p-2 rounded-full text-text-secondary hover:text-text-accent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary"
+            >
+              <svg
+                id="theme-icon-sun"
+                class="w-6 h-6 hidden"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"
+                ></path>
+              </svg>
+              <svg
+                id="theme-icon-moon"
+                class="w-6 h-6 hidden"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"
+                ></path>
+              </svg>
+            </button>
             <a
-              href="../index.html#services"
-              class="text-light/80 hover:text-light transition-colors"
+              href="index.html#services"
+              class="text-text-secondary hover:text-text-accent transition-colors"
               >What We Do</a
             >
             <a
-              href="index.html"
-              class="text-light hover:text-light transition-colors font-semibold"
+              href="index.html#why-us"
+              class="text-text-secondary hover:text-text-accent transition-colors"
+              >Why Us</a
+            >
+            <a
+              href="index.html#how-we-work"
+              class="text-text-secondary hover:text-text-accent transition-colors"
+              >Process</a
+            >
+            <a
+              href="index.html#insights"
+              class="text-text-secondary hover:text-text-accent transition-colors"
               >Insights</a
             >
             <a
-              href="../index.html#contact"
+              href="index.html#contact"
               class="btn btn-primary px-5 py-2.5 rounded-lg text-white font-medium"
               >Let's Talk</a
             >
           </div>
           <button
             id="mobile-menu-button"
-            class="md:hidden text-light p-2 rounded-md"
+            class="md:hidden text-text-accent p-2 rounded-md focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary"
             aria-controls="mobile-menu"
             aria-expanded="false"
           >
@@ -116,6 +197,39 @@
             </svg>
           </button>
         </nav>
+
+        <div
+          id="mobile-menu"
+          class="hidden md:hidden py-4 mt-4 bg-background-alt rounded-lg border border-default"
+        >
+          <div class="flex flex-col space-y-4 px-6">
+            <a
+              href="index.html#services"
+              class="text-text-secondary hover:text-text-accent transition-colors py-2"
+              >What We Do</a
+            >
+            <a
+              href="index.html#why-us"
+              class="text-text-secondary hover:text-text-accent transition-colors py-2"
+              >Why Us</a
+            >
+            <a
+              href="index.html#how-we-work"
+              class="text-text-secondary hover:text-text-accent transition-colors py-2"
+              >Process</a
+            >
+            <a
+              href="index.html#insights"
+              class="text-text-secondary hover:text-text-accent transition-colors py-2"
+              >Insights</a
+            >
+            <a
+              href="index.html#contact"
+              class="btn btn-primary px-5 py-2.5 rounded-lg text-white font-medium text-center mt-2"
+              >Let's Talk</a
+            >
+          </div>
+        </div>
       </div>
     </header>
 
@@ -156,42 +270,164 @@
       </article>
     </main>
 
-    <footer class="py-12 border-t border-gray-800">
-      <div class="container mx-auto px-6 md:px-12 text-center">
-        <div class="flex justify-center gap-6 mb-8">
-          <a
-            href="../index.html#services"
-            class="text-light/60 hover:text-light"
-            >Services</a
-          >
-          <a href="index.html" class="text-light/60 hover:text-light"
-            >All Insights</a
-          >
-          <a href="../index.html#contact" class="text-light/60 hover:text-light"
-            >Contact</a
-          >
+    <footer class="py-8 bg-background-alt border-t border-default">
+      <div class="container mx-auto px-6 md:px-12">
+        <div class="grid grid-cols-1 lg:grid-cols-12 gap-12">
+          <div class="lg:col-span-4">
+            <a href="index.html#" class="flex items-center gap-3">
+              <img
+                src="/images/logo.svg"
+                alt="AlphaPebble Logo"
+                class="h-10 w-10 rounded-full bg-white p-0.5"
+              />
+              <span class="text-xl font-bold text-text-secondary"
+                >AlphaPebble</span
+              >
+            </a>
+            <p class="text-text-secondary mt-4 max-w-md">
+              A micro-product studio that builds MVPs and runs experiments
+              quickly for founders who move fast.
+            </p>
+            <div class="flex gap-5 mt-6">
+              <a
+                href="index.html#"
+                class="text-text-secondary hover:text-accent transition-colors"
+                aria-label="Twitter"
+              >
+                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                  <path
+                    d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"
+                  ></path>
+                </svg>
+              </a>
+              <a
+                href="index.html#"
+                class="text-text-secondary hover:text-accent transition-colors"
+                aria-label="LinkedIn"
+              >
+                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                  <path
+                    d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
+                  ></path>
+                </svg>
+              </a>
+              <a
+                href="index.html#"
+                class="text-text-secondary hover:text-accent transition-colors"
+                aria-label="GitHub"
+              >
+                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                  <path
+                    fill-rule="evenodd"
+                    d="M12 2C6.477 2 2 6.477 2 12c0 4.418 2.865 8.168 6.839 9.49.5.092.682-.217.682-.482 0-.237-.009-.868-.014-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.03 1.531 1.03.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.03-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.203 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.338 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.001 10.001 0 0022 12c0-5.523-4.477-10-10-10z"
+                    clip-rule="evenodd"
+                  />
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div class="lg:col-span-2">
+            <h4 class="text-lg font-semibold mb-4">Navigation</h4>
+            <ul class="space-y-3">
+              <li>
+                <a
+                  href="index.html#services"
+                  class="text-text-secondary hover:text-text-secondary"
+                  >What We Do</a
+                >
+              </li>
+              <li>
+                <a
+                  href="index.html#why-us"
+                  class="text-text-secondary hover:text-text-secondary"
+                  >Why Us</a
+                >
+              </li>
+              <li>
+                <a
+                  href="index.html#how-we-work"
+                  class="text-text-secondary hover:text-text-secondary"
+                  >Process</a
+                >
+              </li>
+              <li>
+                <a
+                  href="index.html#insights"
+                  class="text-text-secondary hover:text-text-secondary"
+                  >Insights</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="lg:col-span-2">
+            <h4 class="text-lg font-semibold mb-4">Company</h4>
+            <ul class="space-y-3">
+              <li>
+                <a
+                  href="index.html#team"
+                  class="text-text-secondary hover:text-text-secondary"
+                  >About Us</a
+                >
+              </li>
+              <li>
+                <a
+                  href="index.html#faq"
+                  class="text-text-secondary hover:text-text-secondary"
+                  >FAQ</a
+                >
+              </li>
+              <li>
+                <a
+                  href="index.html#contact"
+                  class="text-text-secondary hover:text-text-secondary"
+                  >Contact</a
+                >
+              </li>
+              <li>
+                <a
+                  href="blog.html"
+                  class="text-text-secondary hover:text-text-secondary"
+                  >Blog</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="lg:col-span-4">
+            <h4 class="text-lg font-semibold mb-4">Get Founder Insights</h4>
+            <p class="text-text-secondary mb-4">
+              Join our newsletter for practical advice on building and scaling
+              your startup. No spam, ever.
+            </p>
+            <form class="flex flex-col sm:flex-row gap-2">
+              <input
+                type="email"
+                name="email"
+                class="w-full px-4 py-3 bg-background border border-default rounded-lg focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent text-text-secondary"
+                placeholder="your@email.com"
+              />
+              <button
+                type="submit"
+                class="btn btn-primary px-5 py-3 rounded-lg text-white font-semibold flex-shrink-0"
+              >
+                Subscribe
+              </button>
+            </form>
+          </div>
         </div>
-        <p class="text-light/60">
-          &copy; <span id="copyright-year"></span> AlphaPebble. All rights
-          reserved.
-        </p>
+        <div
+          class="mt-16 pt-8 border-t border-default text-center text-text-secondary"
+        >
+          <p>
+            &copy; <span id="copyright-year">2025</span> AlphaPebble. All rights
+            reserved.
+          </p>
+        </div>
       </div>
     </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init({ duration: 700, once: true, offset: 50 });
-      document.addEventListener("DOMContentLoaded", function () {
-        const header = document.querySelector("header");
-        header &&
-          window.addEventListener("scroll", function () {
-            window.scrollY > 50
-              ? header.classList.add("scrolled")
-              : header.classList.remove("scrolled");
-          });
-        const yearSpan = document.getElementById("copyright-year");
-        yearSpan && (yearSpan.textContent = new Date().getFullYear());
-      });
-    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="/script.js" defer></script>
   </body>
 </html>
