--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <body class="min-h-screen">
     <div
       id="reading-progress-bar"
-      class="fixed top-0 left-0 h-1 bg-accent z-[99999] transform scaleX-0 origin-left transition-transform ease-out duration-100"
+      class="fixed top-0 left-0 h-1 bg-[var(--color-accent)] z-[99999] transform scale-x-0 origin-left transition-transform ease-out duration-100"
     ></div>
     <a
       href="#main-content"
